# fractal-maker

./: Cargo.toml  README.md
src/: main.rs  make_and_show.rs  patterns.rs
