[package]
name = "fractal-maker"
version = "0.1.0"
authors = ["Jack Maguire <jackmaguire1234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
piston_window = "0.120.0"
image = "0.23.14"
rayon = "1.5.1"
